--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   .container
     .hero-unit
-      h1= title
+      img(id="logo", src="/images/theQuestLogo.png")
       p
         | Meet the new very addictive, _open source_ 
         | , realtime MMO game. The goal is simple - steal the treasure. Have fun NOW with your friends or other players all over the world.
