added facebook opengraph tags

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,9 @@ doctype 5
 html
   head
     title= title
+    meta(property="og:title", content="The quest!")
+    meta(property="og:image", content="http://176.58.101.229:3000/images/theQuestLogo.png")
+    meta(property="og:type", content="game")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
     script(src='http://code.jquery.com/jquery.min.js')
