--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,27 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  overflow: hidden;
 }
 
 a {
   color: #00B7FF;
+}
+
+.gameWorld {
+  width: 800px;
+  height: 600px;
+  margin: 0 auto;
+  border: 1px solid red;
+}
+
+.player {
+  width: 32px;
+  height: 32px;
+  position: fixed;
+  border: 1px solid green;
+}
+
+.player.hasTreasure {
+  background-color: red;
 }
