--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,12 +13,15 @@ a {
   height: 600px;
   margin: 0 auto;
   border: 1px solid red;
+  position: relative;
+  top: -160px;
+  left: 0;
 }
 
 .player {
   width: 32px;
   height: 32px;
-  position: fixed;
+  position: absolute;
   border: 1px solid green;
 }
 
