--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
   span.visitorsTitle Visitors:
   span.visitorsCount= 0
   script.
-    var socket = io.connect('http://localhost');
+    var socket = io.connect();
     socket.on('visitorsOnline', function (data) {
       $(".visitorsCount").html(data);
     });
