--- a/views/user/register.jade
+++ b/views/user/register.jade
@@ -6,5 +6,5 @@ block content
   form(method="POST")
     input(type="text", name="username", placeholder="username")
     input(type="password", name="password", placeholder="password")
-    input(type="password2", name="password2", placeholder="password again")
+    input(type="password", name="password2", placeholder="password again")
     input(type="submit", value="register")
