revert back to browserify game-index

--- a/views/game.jade
+++ b/views/game.jade
@@ -10,4 +10,4 @@ block content
   span.visitorsCount= 0
   script.
     user = !{JSON.stringify(user)}
-  script(src="/javascripts/game-index.js")
+  script(src="/game-index.js")
