removed unnessesery files

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,9 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='http://code.jquery.com/jquery.min.js')
     script(src='/socket.io/socket.io.js')
-    script(src='js/underscore-min.js')
-    script(src='js/backbone-min.js')
-    script(src='js/jquery.ba-resize.min.js')
-    script(src='js/jquery.mousewheel.min.js')
+    script(src='javascripts/underscore-min.js')
+    script(src='javascripts/backbone-min.js')
   body
     block content
