fixed links on home page

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,9 +14,9 @@ block content
             li.active
               a(href='/game') Game
             li
-              a(href='/user/login') Login
+              a(href='users/login') Login
             li
-              a(href='user/register') Register
+              a(href='users/register') Register
         //
           /.nav-collapse 
   .container
@@ -51,7 +51,7 @@ block content
         p
           | The inisial game was developed with much love for 4-5 hours from the course head man 
           a(href='https://github.com/outbounder') outbounder. 
-          Then almost all of course participants started with pull requests from 
+          | Then almost all of course participants started with pull requests from 
           a(href='https://github.com/outbounder/node-thequest/graphs/contributors') contributors.
           | To see list of all contributors and game code click this button
         p
