--- a/views/user/register.jade
+++ b/views/user/register.jade
@@ -7,4 +7,6 @@ block content
     input(type="text", name="username", placeholder="username")
     input(type="password", name="password", placeholder="password")
     input(type="password", name="password2", placeholder="password again")
-    input(type="submit", value="register")
+    input.btn(type="submit", value="register")
+  .orLogin
+    a.btn(href="/users/login") Login
