--- a/views/user/login.jade
+++ b/views/user/login.jade
@@ -6,4 +6,6 @@ block content
   form(method="POST")
     input(type="text", name="username", placeholder="username")
     input(type="password", name="password", placeholder="password")
-    input(type="submit", value="login")
+    input.btn(type="submit", value="login")
+  .orRegister
+    a.btn(href="/users/register") Register
