--- a/views/game.jade
+++ b/views/game.jade
@@ -2,12 +2,19 @@ extends layout
 
 block content
   h1 TheQuest
-  a(href="/users/logout") logout
-  .timeLeft
+  .menu
+    a(href="/users/logout") logout
+    .timeLeft.menuItem
+    .victories.menuItem
+      | Victories:
+      span.victoriesCount 0
   .gameWorld
+    .winLabel.endLabel You win
+    .looseLabel.endLabel You loose :|
   
-  span.visitorsTitle Visitors:
-  span.visitorsCount= 0
+
+
+  
   script.
     user = !{JSON.stringify(user)}
   script(src="/game-index.js")
