--- a/views/game.jade
+++ b/views/game.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
   h1 TheQuest
+  h2 Hosted by a(href='http://camplight.net/', title='Camplight') Camplight
   .menu
     a(href="/users/logout") logout
     .timeLeft.menuItem
