--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
+    script(src='https://raw.github.com/mrdoob/three.js/master/build/three.js')
     script(src='http://code.jquery.com/jquery.min.js')
     script(src='/socket.io/socket.io.js')
   body
