--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,12 @@
 body {
-  padding: 50px;
+  padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   overflow: hidden;
+  position: absolute;
+}
+
+h1 {
+  position: absolute;;
 }
 
 a {
@@ -9,17 +14,14 @@ a {
 }
 
 .name {
-  position: absolute;
   top: 36px;
   left: 3px;
 }
 
 .gameWorld {
-  width: 800px;
-  height: 600px;
+  width: 100%;
+  height: 100%px;
   margin: 0 auto;
-  border: 1px solid red;
-  position: relative;
 }
 
 .player {
@@ -54,8 +56,10 @@ a {
 }
 
 .menu {
+  top: 50px;
   margin: 0 auto;
   width: 800px;
+  position: absolute;
 }
 
 .menuItem {
