--- a/views/user/login.jade
+++ b/views/user/login.jade
@@ -10,8 +10,8 @@ block content
       input.btn(type="submit", value="login")
     div.avatar
       label#label-1(for="avatar-1")
-        input#avatar-1(type="radio", name="avatar")
+        input#avatar-1(type="radio", name="avatar", value="1")
       label#label-2(for="avatar-2")
-        input#avatar-2(type="radio", name="avatar")
+        input#avatar-2(type="radio", name="avatar", value="2")
   .orRegister
     a.btn(href="/users/register") Register
