--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,8 @@
 body {
-  padding: 50px;
+  padding: 50px 0 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   overflow: hidden;
+  background-color: #000!important;
 }
 
 a {
@@ -14,15 +15,41 @@ a {
   left: 3px;
 }
 
+.wrapper{
+  width: 900px;
+  height: 600px;
+  margin: 0 auto;
+  background-image: url('../viewport.png');
+  background-repeat: no-repeat;
+  background-position: 50% top;
+}
+
+.menu {
+  position: relative;
+  overflow: hidden;
+  padding: 70px 220px 80px;
+}
+
+/* logout link */
+.menu a{
+  position: absolute;
+  z-index: 10;
+  right:120px;
+  top: 85px;
+}
+
+.menuItem {
+  float: left;
+  width: 50%;
+  text-align: center;
+  color: white;
+}
+
 .gameWorld {
   position: relative;
-  width: 800px;
-  height: 500px;
+  width: 700px;
+  height: 400px;
   margin: 0 auto;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  box-shadow: inset 0 1px 3px #aaa;
-  background: #fffaE0;
 }
 
 .player {
@@ -43,8 +70,8 @@ a {
 }
 
 .endLabel {
-  width: 800px;
-  height: 500px;
+  width: 700px;
+  height: 400px;
   margin: 0 auto;
   text-align: center;
   font-size: 48px;
@@ -54,16 +81,6 @@ a {
   opacity: 0.5;
   position: absolute;
   z-index: 100;
-}
-
-.menu {
-  margin: 0 auto;
-  width: 800px;
-}
-
-.menuItem {
-  float:left;
-  width: 250px;
 }
 
 /* avatar selection in login */
