adding viewport UI

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,9 @@
 body {
-  padding: 50px;
+  padding: 50px 0 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   overflow: hidden;
+  /* to override bootstrap's background color */
+  background-color: #000!important;
 }
 
 a {
@@ -14,12 +16,41 @@ a {
   left: 3px;
 }
 
-.gameWorld {
-  width: 800px;
+.wrapper{
+  width: 900px;
   height: 600px;
   margin: 0 auto;
-  border: 1px solid red;
+  background-image: url('../images/viewport.png');
+  background-repeat: no-repeat;
+  background-position: 50% top;
+}
+
+.menu {
   position: relative;
+  overflow: hidden;
+  padding: 70px 220px 80px;
+}
+
+/* logout link */
+.menu a{
+  position: absolute;
+  z-index: 10;
+  right:120px;
+  top: 85px;
+}
+
+.menuItem {
+  float: left;
+  width: 50%;
+  text-align: center;
+  color: white;
+}
+
+.gameWorld {
+  position: relative;
+  width: 700px;
+  height: 400px;
+  margin: 0 auto;
 }
 
 .player {
@@ -39,8 +70,8 @@ a {
 }
 
 .endLabel {
-  width: 800px;
-  height: 600px;
+  width: 700px;
+  height: 400px;
   margin: 0 auto;
   text-align: center;
   font-size: 48px;
@@ -50,16 +81,6 @@ a {
   opacity: 0.5;
   position: absolute;
   z-index: 100;
-}
-
-.menu {
-  margin: 0 auto;
-  width: 800px;
-}
-
-.menuItem {
-  float:left;
-  width: 250px;
 }
 
 .player #avatar {
