--- a/views/game.jade
+++ b/views/game.jade
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  h1 TheQuest
+  .gameTitle 
+    h1 TheQuest
   .menu
     a(href="/users/logout") logout
     .timeLeft.menuItem
