added sound toggler

--- a/views/game.jade
+++ b/views/game.jade
@@ -3,6 +3,7 @@ extends layout
 block content
   .gameTitle 
     h1 TheQuest
+    a(href="javascript: void(0)").soundToggle Toggle sound off
   .menu
     a(href="/users/logout") logout
     .timeLeft.menuItem
