--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@ doctype 5
 html
   head
     title= title
-    meta(property="og:title", content="The quest!")
+    meta(property="og:title", content="When the time runs out make sure you're holding the gold coin!")
     meta(property="og:image", content="http://176.58.101.229:3000/images/theQuestLogo.png")
     meta(property="og:type", content="game")
     link(rel='stylesheet', href='/stylesheets/style.css')
@@ -10,6 +10,8 @@ html
     script(src='http://code.jquery.com/jquery.min.js')
     script(src='/socket.io/socket.io.js')
   body
+   a(href='https://github.com/outbounder/node-thequest')
+    img(style='position: absolute; top: 0; right: 0; border: 0;', src='https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png', alt='Fork me on GitHub')
     .navbar.navbar-inverse.navbar-fixed-top
       .navbar-inner
         .container
