--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html
     meta(property="og:type", content="game")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
-    script(src='http://code.jquery.com/jquery.min.js')
+    script(src='/javascripts/jquery.1.8.3.js')
     script(src='/socket.io/socket.io.js')
   body
     .navbar.navbar-inverse.navbar-fixed-top
